# sorting-algorithms-visualizer

./: .clang-format  CMakeLists.txt  README.md  clean.sh  compile.sh  format.sh  makefile  setup.sh
src/: CMakeLists.txt  main.c
src/observer/: observe_bubble.c  observe_cocktail.c  observe_insertion.c  observe_merge.c  observe_quick.c  observe_selection.c  observer.c  observer.h
src/observer/setup/: setup.c  setup.h
src/observer/state/: state.c  state.h
src/queue/: CMakeLists.txt  queue.c  queue.h
src/sort/: CMakeLists.txt  bubble.c  cocktail.c  count.c  heap.c  insertion.c  merge.c  quick.c  selection.c  sort.h  swap.c
src/state/: CMakeLists.txt  state.c  state.h
src/visualizer/: CMakeLists.txt  visualizer.c  visualizer.h
tests/: CMakeLists.txt  test.c  test_queue.c  utils.c  utils.h
